--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <script>
         // CONFIG
-        const VERSION = '0.0.1';
-        const URL = 'http://localhost:8082';
+        const VERSION = '1.0.0';
+        const URL = '';
         const FILE_NAMES = [
             'stddev.html',
             'trend_ema.html',
